# interop_test

./: CMakeLists.txt  README.md  net_core.sln
native_library/: CMakeLists.txt
native_library/include/: native.h
native_library/src/: native.cpp
net_proj/: Program.cs  net_proj.csproj
